deployment-geth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geth
  template:
    metadata:
      labels:
        app: geth
    spec:
      containers:
        - name: geth
          image: ethereum/client-go:release-1.16
          command: ["geth"]
          args:
            - "--sepolia"
            - "--syncmode"
            - "full"
            - "--gcmode"
            - "archive"
            - "--datadir"
            - "/data/geth/"
            - "--authrpc.addr"
            - "0.0.0.0"
            - "--authrpc.port"
            - "8551"
            - "--authrpc.vhosts"
            - "*"
            - "--http.vhosts"
            - "*"
            - "--authrpc.jwtsecret"
            - "/root/jwt/jwt.hex"
            - "--http"
            - "--http.addr"
            - "0.0.0.0"
            - "--http.port"
            - "8545"
            - "--http.api"
            - "eth,net,web3"
            - "--discovery.port"
            - "30304"
            - "--port"
            - "30304"
            - "--rpc.evmtimeout"
            - "20s"
          ports:
            - containerPort: 30304
              name: tcp-p2p
              protocol: TCP
            - containerPort: 30304
              name: udp-p2p
              protocol: UDP
            - containerPort: 8545
              name: rpc
              protocol: TCP
            - containerPort: 8551
              name: engine
              protocol: TCP
          volumeMounts:
            - name: geth-data
              mountPath: /data/geth/
            - name: geth-logs
              mountPath: /root/logs
            - name: jwt-token
              mountPath: /root/jwt
              readOnly: true
      volumes:
        - name: geth-data
          persistentVolumeClaim:
            claimName: geth-pvc
        - name: geth-logs
          emptyDir: {}
        - name: jwt-token
          secret:
            secretName: jwt-secret
            items:
            - key: JWT
              path: jwt.hex
---
apiVersion: v1
kind: Service
metadata:
  name: geth-svc
spec:
  ports:
    - port: 30304
      targetPort: 30304
      protocol: TCP
      name: tcp-p2p
    - port: 30304
      targetPort: 30304
      protocol: UDP
      name: udp-p2p
    - port: 8545
      targetPort: 8545
      protocol: TCP
      name: rpc
    - port: 8551
      targetPort: 8551
      protocol: TCP
      name: engine
  selector:
    app: geth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geth-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "20s"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-connections: "50"
spec:
  ingressClassName: nginx-ingress-prod
  tls:
    - hosts:
        - sepolia.ethereum.iosis.tech
      secretName: ethereum-sepolia-tls
  rules:
    - host: sepolia.ethereum.iosis.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geth-svc
                port:
                  number: 8545
