deployment-lighthouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lighthouse-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lighthouse
  template:
    metadata:
      labels:
        app: lighthouse
    spec:
      containers:
      - name: lighthouse
        image: sigp/lighthouse:v7.0.0-beta.0
        command: ["lighthouse", "bn"]
        args:
        - "--network"
        - "sepolia"
        - "--http"
        - "--http-address"
        - "0.0.0.0"
        - "--execution-endpoint"
        - "http://geth-svc.iosis-tech-sepolia-ethereum-node.svc.cluster.local:8551"
        - "--metrics"
        - "--metrics-address"
        - "0.0.0.0"
        - "--execution-jwt"
        - "/root/jwt/jwt.hex"
        - "--checkpoint-sync-url"
        - "https://sepolia.checkpoint-sync.ethpandaops.io"
        - "--checkpoint-sync-url-timeout"
        - "1000"
        - "--disable-backfill-rate-limiting"
        - "--reconstruct-historic-states"
        - "--prune-blobs"
        - "false"
        - "--prune-payloads"
        - "false"
        ports:
        - containerPort: 5052
          name: http
          protocol: TCP
        - containerPort: 5053
          name: secondary-http
          protocol: TCP
        - containerPort: 5054
          name: metrics
          protocol: TCP
        - containerPort: 9000
          name: tcp-p2p
          protocol: TCP
        - containerPort: 9000
          name: udp-p2p
          protocol: UDP
        volumeMounts:
        - name: lighthouse-data
          mountPath: /root/.lighthouse
        - name: jwt-token
          mountPath: /root/jwt
          readOnly: true
      volumes:
      - name: lighthouse-data
        persistentVolumeClaim:
          claimName: lighthouse-pvc
      - name: jwt-token
        secret:
          secretName: jwt-secret
          items:
          - key: JWT
            path: jwt.hex
---
apiVersion: v1
kind: Service
metadata:
  name: lighthouse-svc
spec:
  ports:
  - port: 5052
    targetPort: 5052
    protocol: TCP
    name: http
  - port: 5053
    targetPort: 5053
    protocol: TCP
    name: secondary-http
  - port: 5054
    targetPort: 5054
    protocol: TCP
    name: metrics
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: tcp-p2p
  - port: 9000
    targetPort: 9000
    protocol: UDP
    name: udp-p2p
  selector:
    app: lighthouse
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lighthouse-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "20s"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-connections: "50"
spec:
  ingressClassName: nginx-ingress-prod
  tls:
    - hosts:
        - beacon.sepolia.ethereum.iosis.tech
      secretName: ethereum-sepolia-tls
  rules:
    - host: beacon.sepolia.ethereum.iosis.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lighthouse-svc
                port:
                  number: 5052
