deployment-reth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reth
  template:
    metadata:
      labels:
        app: reth
    spec:
      containers:
        - name: reth
          image: ghcr.io/paradigmxyz/reth:v1.8.2
          command: ["/usr/local/bin/reth"]
          args:
            - "node"
            - "--config"
            - "/root/.local/share/reth/config/reth.toml"
            - "--chain"
            - "mainnet"
            - "--log.file.directory"
            - "/root/logs"
            - "--authrpc.addr"
            - "0.0.0.0"
            - "--authrpc.port"
            - "8551"
            - "--authrpc.jwtsecret"
            - "/root/jwt/jwt.hex"
            - "--http"
            - "--http.addr"
            - "0.0.0.0"
            - "--http.port"
            - "8545"
            - "--http.api"
            - "eth,net,web3"
          ports:
            - containerPort: 8545
              name: rpc
              protocol: TCP
            - containerPort: 8551
              name: engine
              protocol: TCP
          volumeMounts:
            - name: reth-data
              mountPath: /root/.local/share/reth/sepolia
            - name: reth-logs
              mountPath: /root/logs
            - name: jwt-token
              mountPath: /root/jwt
              readOnly: true
            - name: reth-config-rw
              mountPath: /root/.local/share/reth/config
      volumes:
        - name: reth-data
          persistentVolumeClaim:
            claimName: reth-pvc
        - name: reth-logs
          emptyDir: {}
        - name: jwt-token
          secret:
            secretName: jwt-secret
            items:
              - key: JWT
                path: jwt.hex
        - name: reth-config-ro
          configMap:
            name: reth-config-map
        - name: reth-config-rw
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: reth-svc
spec:
  ports:
    - port: 8545
      targetPort: 8545
      protocol: TCP
      name: rpc
    - port: 8551
      targetPort: 8551
      protocol: TCP
      name: engine
  selector:
    app: reth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reth-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "20s"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-connections: "50"
spec:
  ingressClassName: nginx-ingress-prod
  tls:
    - hosts:
        - mainnet.ethereum.iosis.tech
      secretName: ethereum-mainnet-tls
  rules:
    - host: mainnet.ethereum.iosis.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reth-svc
                port:
                  number: 8545
